--- a/templates/login.html
+++ b/templates/login.html
@@ -116,6 +116,7 @@
       </big>
       <br />
       <br />
+      This is the [2i2c Showcase Hub](https://compass.2i2c.org/projects/managed-hubs/showcase-hub/#showcase-hub).
       This is a pilot service running on open source infrastructure.
       See <a href="https://2i2c.org/pilot" class="text-decoration-none">the 2i2c Pilot documentation</a> for usage and deployment information.</p>
     </div>
