add Plausible analystics to showcase hub

--- a/templates/login.html
+++ b/templates/login.html
@@ -45,6 +45,7 @@
 {% else %}
 {{ super() }}
 <script src="{{ static_url('extra-assets/js/login.js') }}"></script>
+<script defer data-domain="showcase.2i2c.cloud" src="https://plausible.io/js/script.js"></script>
 {% endif %}
 {% endblock %}
 
