replace scripts on page

--- a/templates/page.html
+++ b/templates/page.html
@@ -2,6 +2,7 @@
 
 {% block scripts %}
 
-<script defer data-domain="showcase.2i2c.cloud" src="https://plausible.io/js/script.js"></script>
+{{ super() }}
 
+<script defer data-domain="showcase.2i2c.cloud" src="https://plausible.io/js/script.js"></script>
 {% endblock %}
